# brutal

./: .clang-format  .clangd  .gitignore  CMakeLists.txt  CMakePresets.json  Makefile
graveyard/: brutal_ecs_experiment.h  tpool_simple.h
include/: brutal_bench.h  brutal_ecs.h  brutal_tpool.h  dyna.h  mpmc_tpool.h  spmc_tpool.h  spmc_tpool_box2d.h
src/: brutal_bench.c  brutal_ecs.c  brutal_tpool.c  spmc_tpool.c
test/: CMakeLists.txt  bench_tpool_compare.c  benchmark.c  brutal_bench.h  pico_bench.h  pico_unit.h  test.c  test_brutal_bench.c  test_brutal_ecs.c  test_brutal_tpool.c  test_dyna.c  test_mpmc_tpool.c  test_spmc_tpool.c
